Amarok ChangeLog
================
(C) 2002-2011 the Amarok authors.

Version 2.6-Beta 1
  FEATURES:
    * album artist (if differs from artist), BPM, labels, last played time and
      bitrate are now shown in playlist track tooltip (if not already displayed
      in playlist)
    * Volume normalization: ReplayGain is now converted to iPod Sound Check and
      vice versa. (BR 142579)

  CHANGES:
    * libgpod requirement raised from 0.7.0 to 0.7.93 for better maintainability.
    * When hovering iPod, UMS or MTP collection in collection browser,
      "1.2 GB free" is shown instead of "85% used"; thicker capacity bar.

  BUGFIXES:
    * Fix rare APG solver crash. (BR 290533)
    * Compilations are handled more consistently on iPods. (BR 232072)

Version 2.5
  FEATURES:
    * Now It's possible to use formated strings for prefix and suffix in 
      Playlist's layout items.

  BUGFIXES:
    * Do not crash when iPod doesn't have a master playlist. (BR 288936)
    * Fix Last.fm not finding KDE Wallet. (BR 286741)
    * Put a border around bottom toolbars, visually separating them from
      browser contents. (BR 277741)
    * Align the bottom toolbars.
    * Allow albums with empty name but nonempty artist in local collection. (BR 272471)
    * Fix collection info display (track count, free space) for iPod and MTP
      devices. (BR 232093)
    * Fix crash at exit with Qt 4.8
    * Fix moving applets rightward in the context toolbar.
    * Fix breadcrumbs not working properly for the file browser.
    * Disable cover fetching action for tracks not in the collection to avoid
      crash when trying to "save as" a cover. (BR 287604)
    * Show default cover in tag dialog when track is not in the collection.
    * Fix directory selection when opening album location in tag dialog.
    * Fix crash in CoverFoundDialog if progress dialog is cancelled just
      before fetch is done.
    * Correctly parse disambiguation pages for songs in the English Wikipedia. (BR 270054)